# citibike-extractor

./: README.md  pyproject.toml
.github/: dependabot.yml
src/citibike_extractor/: __init__.py  constants.py  main.py
src/citibike_extractor/templates/: f1-import.sql  f2-import.sql  schema.sql
