[project]
name = "citibike-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "BlueOak-1.0.0"
license-files = ["LICENSE.md"]
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.4",
    "fsspec>=2026.6.0",
    "tqdm>=4.68.4",
]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
    "ty>=0.0.58",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[project.scripts]
citibike-extractor = "citibike_extractor:main"
